# haskell-project-template

./: CHANGELOG.md  README.md  default.nix
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  LICENSE  Makefile  README.md  cabal.project  cookiecutter.json  hie.yaml  shell.nix  {{cookiecutter.project_name}}.cabal
