cabal-version:          3.0
name:                   {{cookiecutter.project_name}}
version:                1.0.0.0

-- https://spdx.org/licenses/
license:                AGPL-3.0-only
license-file:           LICENSE
author:                 {{cookiecutter.copyright_author}}
maintainer:             {{cookiecutter.maintainer_email}}
synopsis:               {{cookiecutter.project_name}}
description:            {{cookiecutter.project_name}} description
homepage:               https://github.com/avanov/{{cookiecutter.project_name}}
bug-reports:            https://github.com/avanov/{{cookiecutter.project_name}}/issues
copyright:              Copyright (c) {{cookiecutter.copyright_year}} {{cookiecutter.copyright_author}}

extra-source-files:     CHANGELOG.md
                        README.md

executable {{cookiecutter.project_name}}
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base          >= 4.14.1.0 && < 5

    hs-source-dirs:     app
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -fPIC
                        -static
                        -optl=-pthread

library
    exposed-modules:    Lib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base          >= 4.14.1.0 && < 5

    hs-source-dirs:     lib

    default-language:   Haskell2010

    default-extensions: OverloadedStrings
                        LambdaCase
                        QuasiQuotes

    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -fPIC
                        -static
                        -optl=-pthread

    cc-options:         -static

